--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,10 @@ edition = "2021"
 [dependencies]
 adw = { version = "0.4.4", package = "libadwaita", features = ["v1_2"] }
 gtk = { version = "0.6.6", package = "gtk4", features = ["v4_10"] }
-rusty-tesseract = "1.1.4"
+rusty-tesseract = "1.1.5"
 once_cell = "1.18.0"
-
+libretranslate = "0.5.1"
+screenshots = "0.6.0"
 [build-dependencies]
 glib-build-tools = "0.17.0"
 gtk = { version = "0.6.2", package = "gtk4" }
