--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "game-translator"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -10,8 +10,11 @@ adw = { version = "0.4.4", package = "libadwaita", features = ["v1_2"] }
 gtk = { version = "0.6.6", package = "gtk4", features = ["v4_10"] }
 rusty-tesseract = "1.1.5"
 once_cell = "1.18.0"
-libretranslate = "0.5.1"
 screenshots = "0.6.0"
+headless_chrome = "1.0.5"
+urlencoding = "2.1.2"
+failure = "0.1.8"
+anyhow = "1.0.71"
 [build-dependencies]
 glib-build-tools = "0.17.0"
 gtk = { version = "0.6.2", package = "gtk4" }
