--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ headless_chrome = "1.0.5"
 urlencoding = "2.1.2"
 failure = "0.1.8"
 anyhow = "1.0.71"
+rayon = "1.7.0"
+uuid = { version = "1.4.1", package = "uuid", features = ["v4", "fast-rng"] }
 [build-dependencies]
 glib-build-tools = "0.17.0"
 gtk = { version = "0.6.2", package = "gtk4" }
