--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,19 +6,21 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-adw = { version = "0.4.4", package = "libadwaita", features = ["v1_2"] }
-gtk = { version = "0.6.6", package = "gtk4", features = ["v4_10"] }
+adw = { version = "0.6.0", package = "libadwaita", features = ["v1_2"] }
+gtk = { version = "0.8.2", package = "gtk4", features = ["v4_10"] }
 rusty-tesseract = "1.1.5"
 once_cell = "1.18.0"
 headless_chrome = "1.0.5"
 urlencoding = "2.1.2"
-failure = "0.1.8"
 anyhow = "1.0.71"
 rayon = "1.7.0"
 uuid = { version = "1.4.1", package = "uuid", features = ["v4", "fast-rng"] }
 gdk4-win32 = { version = "0.8.2", features = ["v4_4", "win32"] }
 xcap = "0.0.10"
 image = "0.25.1"
+serde = "1.0.203"
+serde_json = "1.0.117"
+async-channel = "2.3.1"
 [build-dependencies]
-glib-build-tools = "0.17.0"
-gtk = { version = "0.6.2", package = "gtk4" }
+glib-build-tools = "0.19.0"
+gtk = { version = "0.8.2", package = "gtk4" }
