--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -55,7 +55,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         with:
-          tag_name: ${{ github.sha }}
+          tag_name: ${{ github.ref }}
           release_name: ${{ steps.version.outputs.version }}
           draft: false
           prerelease: false
