--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,18 +9,18 @@ edition = "2021"
 adw = { version = "0.6.0", package = "libadwaita", features = ["v1_2"] }
 gtk = { version = "0.8.2", package = "gtk4", features = ["v4_10"] }
 rusty-tesseract = "1.1.10"
-once_cell = "1.18.0"
-headless_chrome = "1.0.5"
+once_cell = "1.21.3"
 urlencoding = "2.1.2"
-anyhow = "1.0.71"
+anyhow = "1.0.98"
 rayon = "1.7.0"
 uuid = { version = "1.4.1", package = "uuid", features = ["v4", "fast-rng"] }
 gdk4-win32 = { version = "0.8.2", features = ["v4_4", "win32"] }
 xcap = "0.6.2"
-image = "0.25.1"
-serde = "1.0.203"
-serde_json = "1.0.117"
-async-channel = "2.3.1"
+image = "0.25.6"
+serde = "1.0.219"
+serde_json = "1.0.141"
+tokio = { version = "1.46.1", features = ["rt-multi-thread"] }
+fantoccini = "0.22.0"
 [build-dependencies]
 glib-build-tools = "0.19.0"
 gtk = { version = "0.8.2", package = "gtk4" }
