--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ serde = "1.0.219"
 serde_json = "1.0.141"
 tokio = { version = "1.46.1", features = ["rt-multi-thread"] }
 fantoccini = "0.22.0"
+webdriver-downloader = "0.16.0"
 [build-dependencies]
 glib-build-tools = "0.19.0"
 gtk = { version = "0.8.2", package = "gtk4" }
