--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "game-translator"
-version = "0.10.0"
+version = "0.11.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -22,6 +22,7 @@ tokio = { version = "1.47.0", features = ["full"] }
 fantoccini = "0.22.0"
 reqwest = "0.12.22"
 zip = "4.3.0"
+regex = "1.11.1"
 [build-dependencies]
 glib-build-tools = "0.19.0"
 gtk = { version = "0.8.2", package = "gtk4" }
